[gd_scene load_steps=2 format=3 uid="uid://bu4xuqt0ctw8m"]

[ext_resource type="Script" uid="uid://og3km72dlywg" path="res://store.gd" id="1_c176v"]

[node name="store" type="Node"]
script = ExtResource("1_c176v")

[node name="balance" type="Label" parent="."]
offset_left = 4.0
offset_top = 557.0
offset_right = 199.0
offset_bottom = 612.0
text = "баланс:"

[node name="joker1" type="Button" parent="."]
offset_left = 43.0
offset_top = 49.0
offset_right = 199.0
offset_bottom = 238.0
text = "червовый джокер (4)"

[node name="joker2" type="Button" parent="."]
offset_left = 43.0
offset_top = 263.0
offset_right = 204.0
offset_bottom = 452.0
text = "крестовый джокер (5)"

[node name="joker3" type="Button" parent="."]
offset_left = 412.0
offset_top = 44.0
offset_right = 559.0
offset_bottom = 233.0
text = "пиковый джокер (6)"

[node name="joker4" type="Button" parent="."]
offset_left = 412.0
offset_top = 251.0
offset_right = 557.0
offset_bottom = 438.0
text = "бубовый джокер (5)"

[node name="Button32" type="Button" parent="."]
offset_left = 745.0
offset_top = 157.0
offset_right = 912.0
offset_bottom = 310.0
text = "дальше"
